--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -20,6 +20,7 @@ nav {
   display: flex;
  justify-content: space-around;
  align-items: center;
+ margin:0 200px;
 }
 .nav-title {
   color: #181818;
@@ -41,4 +42,27 @@ nav li {
 nav a {
   text-decoration: none;
   color: #474747;
+}
+
+/* header related styles*/
+.header{
+    background-color: #FFF8F4;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display:flex;
+    align-items: center;
+}
+.banner-greeting{
+
+
+}
+.banner-title{
+
+}
+.banner .propic{
+    width:500px;
+}
+.banner .banner-content{
+    
 }
