--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -14,13 +14,25 @@
 * {
   font-family: "Open Sans", sans-serif;
 }
+.section-title {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
+}
+.section-description {
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+}
 
 /*nav related styles*/
 nav {
   display: flex;
- justify-content: space-around;
- align-items: center;
- margin:0 200px;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 200px;
 }
 .nav-title {
   color: #181818;
@@ -45,24 +57,46 @@ nav a {
 }
 
 /* header related styles*/
-.header{
-    background-color: #FFF8F4;
+.header {
+  background-color: #fff8f4;
+  background-image: url("../images/header_bg.png");
+  background-repeat: no-repeat;
+  background-position: bottom right;
 }
-.banner{
-    padding: 30px 30px 30px 150px;
-    display:flex;
-    align-items: center;
+.banner {
+  padding: 30px 30px 0 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.banner-greeting{
+.banner-greeting {
+  font-size: 45px;
+  font-weight: 600;
+  color: #474747;
+  margin-bottom: 0;
+}
+.banner-title {
+  font-size: 85px;
+  font-weight: 700;
+  color: #181818;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+.banner-description {
+  margin-top: 0;
+}
 
-
+.banner .propic {
+  width: 580px;
 }
-.banner-title{
-
+.banner .banner-content {
+  max-width: 500px;
 }
-.banner .propic{
-    width:500px;
-}
-.banner .banner-content{
-    
+/*main section styles*/
+/* about section styles*/
+.about {
+  margin: 130px 0;
+  padding: 130px 156px;
+  border-radius: 10px;
+  background: #fff8f3;
 }
