--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -114,9 +114,32 @@ main {
   font-size: 20px;
   font-weight: 400;
 }
-.info-title{
-    margin-bottom: 5px;
+.info-title {
+  margin-bottom: 5px;
 }
-.info-description{
-    margin-top: 0;
+.info-description {
+  margin-top: 0;
+}
+/*what I do section styles*/
+#what-i-do-description {
+  margin: 30px 150px;
+}
+/*skills container division styles*/
+.skills-container {
+  margin: 0 50px;
+  justify-content: space-between;
+  display: flex;
+}
+.skill {
+  max-width: 200px;
+}
+.skill-title {
+  color: #181818;
+  font-size: 20px;
+  font-weight: 700;
+}
+.skill-description {
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
 }
