--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -97,10 +97,12 @@ main {
   max-width: 1140px;
   margin: 0 auto; /*horizontal align korar jnno ei auto kajer onk*/
 }
+main section{
+    margin-top: 130px;
+}
 /* about section styles*/
 .about {
-  margin: 130px 0;
-  padding: 130px 156px;
+  padding: 30px 50px;
   border-radius: 10px;
   background: #fff8f3;
 }
@@ -132,6 +134,9 @@ main {
 }
 .skill {
   max-width: 200px;
+  border-radius: 5px;
+  background: #fff;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
 .skill-title {
   color: #181818;
