--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -97,8 +97,8 @@ main {
   max-width: 1140px;
   margin: 0 auto; /*horizontal align korar jnno ei auto kajer onk*/
 }
-main section{
-    margin-top: 130px;
+main section {
+  margin-top: 130px;
 }
 /* about section styles*/
 .about {
@@ -147,4 +147,30 @@ main section{
   color: #757575;
   font-size: 16px;
   font-weight: 400;
+}
+
+/* Resume section styles */
+.resume-container {
+  display: flex;
+  gap: 20px;
+  justify-content: space-around;
+}
+.resume-column {
+}
+.resume-column-title {
+  color: #474747;
+  font-size: 30px;
+  font-weight: 700;
+}
+/*resume-item relates styles*/
+.resume-item {
+}
+.resume-item-title {
+}
+.resume-item-institute {
+  color: #757575;
+  font-size: 20px;
+  font-weight: 600;
+}
+.resume-item-description {
 }
