--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -187,3 +187,21 @@ main section {
     text-align: center;
     margin-top: 50px;
 }
+/* footer styles*/
+footer{
+    margin:110px 120px;
+    padding:130px 20px;
+    background: #FFF8F3;
+    display: flex;
+    gap:40px;
+}
+.footer-column{
+    max-width: 700px;
+}
+input,textarea{
+    display:block;
+    margin-top: 30px;
+}
+footer .social-links a img{
+    margin-right: 40px;
+}
