--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -172,36 +172,55 @@ main section {
   margin-bottom: 10px;
 }
 .resume-item-institute {
-    margin-top: 0;
+  margin-top: 0;
   color: #757575;
   font-size: 20px;
   font-weight: 600;
-  
 }
 .resume-item-description {
   color: #757575;
   font-size: 16px;
   font-weight: 400;
 }
-.download-cv{
-    text-align: center;
-    margin-top: 50px;
+.download-cv {
+  text-align: center;
+  margin-top: 50px;
 }
 /* footer styles*/
-footer{
-    margin:110px 120px;
-    padding:130px 20px;
-    background: #FFF8F3;
-    display: flex;
-    gap:40px;
+footer {
+  margin: 110px 120px;
+  padding: 130px 20px;
+  background: #fff8f3;
+  display: flex;
+  gap: 100px;
 }
-.footer-column{
-    max-width: 700px;
+.footer-column {
+  max-width: 50%;
 }
-input,textarea{
-    display:block;
-    margin-top: 30px;
+
+footer .social-links a {
+  margin-right: 40px;
 }
-footer .social-links a img{
-    margin-right: 40px;
+footer .section-description {
+  text-align: left;
 }
+#name,
+#email,
+#message {
+  display: block;
+  margin-bottom: 30px;
+  padding: 18px 35px;
+  color: #757575;
+  font-size: 16px;
+  font-weight: 400;
+  border-radius: 5px;
+  background: #fff;
+  border: 0;
+  width: 100%;
+}
+/*or inside this:
+.contact input[type="text"],
+input[type="email"],
+textarea {
+}
+*/
